Moving jupyter notebook run command to script. Adding option to specify default conda env

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,7 +1,3 @@
 ---
 # vars file for jupyter-supervisord
-supervisord_program_command: >-
-  /opt/anaconda/bin/jupyter notebook 
-    --config={{ jupyter_config_dir }}/{{ jupyter_profile_name }}_notebook_config.py 
-    --Session.username={{ jupyter_supervisord_username | default('root') }} 
-    --NotebookApp.notebook_dir={{ jupyter_supervisord_notebook_dir | default(jupyter_config_dir) }}
+supervisord_program_command: /usr/local/bin/run-jupyter-notebook.sh
