--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,1 +1,9 @@
 ---
+- name: resolve jupyter-notebook run script
+  become: yes
+  become_user: root
+  with_items:
+    - usr/local/bin/run-jupyter-notebook.sh
+  template: >-
+    src={{item}}.j2
+    dest=/{{item}}
