--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,6 @@
   become_user: root
   with_items:
     - usr/local/bin/run-jupyter-notebook.sh
-  template: >-
+  template: >
     src={{item}}.j2
     dest=/{{item}}
