--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,4 +1,6 @@
 ---
 # vars file for jupyter-supervisord
-jupyter_supervisord_profile_py: >-
-  {{jupyter_supervisord_config_dir}}/{{jupyter_supervisord_profile_name}}_notebook_config.py
+jupyter_supervisord_env_dir: '{{jupyter_supervisord_conda_root}}/envs/{{jupyter_supervisord_name}}'
+jupyter_supervisord_bin_dir: '{{jupyter_supervisord_env_dir}}/bin'
+jupyter_supervisord_profile_py: '{{jupyter_supervisord_env_dir}}/notebook_config.py
+
