--- a/meta/main.yml
+++ b/meta/main.yml
@@ -29,9 +29,10 @@ galaxy_info:
 
 dependencies:
   - role: andrewrothstein.jupyter-profile
-    version: v3.1.0
+    version: v3.1.1
     jupyter_profile_name: '{{jupyter_supervisord_name}}'
     jupyter_profile_environment: '{{jupyter_supervisord_environment}}'
+    jupyter_profile_conda_cleanup: '{{jupyter_supervisord_conda_cleanup}}'
   - role: andrewrothstein.supervisord-program
     version: v1.0.3
     supervisord_program_name: jupyter
