Support loading environment files in shell running jupyter notebook

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,7 @@ jupyter_supervisord_conda_root: /usr/local/anaconda
 jupyter_supervisord_username: root
 
 jupyter_supervisord_conda_cleanup: False
+
+# List set of environment files to load
+#jupyter_supervisord_env_files:
+#  - /etc/profile.d/java.sh
