--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ machine:
 dependencies:
   pre:
     - sudo -H pip install --upgrade pip
-    - sudo -H pip install circleci-helpers ansible-galaxy-local-deps dcb==0.0.11
+    - sudo -H pip install circleci-helpers ansible-galaxy-local-deps dcb==0.0.13
     - ansible-galaxy-local-deps-write
 
 test:
@@ -29,7 +29,8 @@ test:
               - >-
                 dcb
                 --upstreamgroup andrewrothstein
-                --upstreamapp docker-ansible-role
+                --upstreamapp ansible-anaconda
+                --snippet from.j2 ansible-test-role.j2
                 --write ${OS}
                 --build ${OS}
                 --push ${OS}
