--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,6 +13,9 @@ galaxy_info:
     - name: Fedora
       versions:
         - all
+    - name: Debian
+      versions:
+        - jessie
     - name: Ubuntu
       versions:
         - all
@@ -29,10 +32,11 @@ galaxy_info:
 
 dependencies:
   - role: andrewrothstein.jupyter-profile
-    version: v3.1.6
+    version: v3.1.8
     jupyter_profile_name: '{{jupyter_supervisord_name}}'
     jupyter_profile_environment: '{{jupyter_supervisord_environment}}'
     jupyter_profile_conda_cleanup: '{{jupyter_supervisord_conda_cleanup}}'
+    jupyter_profile_privilege_escalate: '{{jupyter_supervisord_privilege_escalate}}'
   - role: andrewrothstein.supervisord-program
     version: v1.0.4
     supervisord_program_name: jupyter
