--- a/vars/main.yml
+++ b/vars/main.yml
@@ -4,3 +4,6 @@ jupyter_supervisord_env_dir: '{{jupyter_supervisord_conda_root}}/envs/{{jupyter_
 jupyter_supervisord_bin_dir: '{{jupyter_supervisord_env_dir}}/bin'
 jupyter_supervisord_profile_py: '{{jupyter_supervisord_env_dir}}/notebook_config.py'
 
+jupyter_supervisord_eff_notebook_dir: >-
+  {% if jupyter_supervisord_notebook_dir is defined %}--NotebookApp.notebook_dir={{jupyter_supervisord_notebook_dir}}{% endif %}
+
