--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,4 @@
----
+  ---
 galaxy_info:
   author: Andrew Rothstein
   description: installs supervisord conf for a jupyter notebook
@@ -39,7 +39,10 @@ dependencies:
     jupyter_profile_privilege_escalate: '{{jupyter_supervisord_privilege_escalate}}'
     jupyter_profile_addl_pkgs: '{{jupyter_supervisord_addl_pkgs|default(jupyter_supervisord_dflt_addl_pkgs)}}'
   - role: andrewrothstein.supervisord-program
-    version: v1.0.4
+    version: v1.0.5
     supervisord_program_name: jupyter
     supervisord_program_command: /usr/local/bin/run-jupyter-notebook.sh
     supervisord_username: '{{jupyter_supervisord_username}}'
+    supervisord_program_stderr_logfile: '{{jupyter_supervisord_program_stderr_logfile}}'
+    supervisord_program_stdout_logfile: '{{jupyter_supervisord_program_stdout_logfile}}'
+    supervisord_program_redirect_stderr: '{{jupyter_supervisord_program_redirect_stderr}}'
