--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,5 +14,11 @@ jupyter_supervisord_autorestart: unexpected
 #   - /foo/profile.d/java.sh
 
 # jupyter_supervisord_config_file: /notebook-config.py
-
 # jupyter_supervisord_notebook_dir: /notebook-dir
+# jupyter_supervisord_addl_cli_options: --Session.username=jdoe
+
+jupyter_supervisord_run_nbconvert_condition: False
+
+# http://nbconvert.readthedocs.io/en/latest/index.html
+# jupyter_supervisord_nbconvert_cli_options: --ExecutePreprocessor.timeout=600 --ExecutePreprocessor.kernel_name=python2
+# jupyter_supervisord_nbconvert_nb: test.ipynb
